fixes styling to get rid of horizontal scroll on mobile

--- a/src/styles/_testimonialSlider2.scss
+++ b/src/styles/_testimonialSlider2.scss
@@ -27,6 +27,7 @@ section {
 
 .swiper-wrapper {
   margin-top: 20px;
+  width: 100%;
 }
 .pagination {
   margin-bottom: 70px;
@@ -35,7 +36,6 @@ section {
   background-position: center;
   background-size: cover;
   align-items: center;
-  width: 300px;
   height: 100%;
   text-align: center;
   background-color: rgba(250, 245, 245, 0.541);
@@ -93,17 +93,7 @@ section {
 .swiper-container-3d .swiper-slide-shadow-right {
   background-image: none !important;
 }
-@media screen and (max-width: 460px) {
-  .swiper-container {
-    width: 100%;
-    margin-left: 50px;
-  }
-}
-@media only screen and (max-width: '1280px') {
-  .swiper-container {
-    width: 100%;
-  }
-}
+
 @media only screen and (max-width: '1280px') {
   .swiper-container {
     width: 100%;
