--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1057,6 +1057,7 @@ section {
 
 .swiper-wrapper {
   margin-top: 20px;
+  width: 100%;
 }
 
 .pagination {
@@ -1069,7 +1070,6 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 300px;
   height: 100%;
   text-align: center;
   background-color: rgba(250, 245, 245, 0.541);
@@ -1136,19 +1136,6 @@ section {
 
 .swiper-container-3d .swiper-slide-shadow-right {
   background-image: none !important;
-}
-
-@media screen and (max-width: 460px) {
-  .swiper-container {
-    width: 100%;
-    margin-left: 50px;
-  }
-}
-
-@media only screen and (max-width: 1280px) {
-  .swiper-container {
-    width: 100%;
-  }
 }
 
 @media only screen and (max-width: 1280px) {
